--- a/PyCitySchools/PyCitySchools_working.ipynb
+++ b/PyCitySchools/PyCitySchools_working.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
     "school_data_to_load = \"Resources/schools_complete.csv\"\n",
@@ -58,70 +59,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Schools</th>\n",
-       "      <th>Total Students</th>\n",
-       "      <th>Total Budget</th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15</td>\n",
-       "      <td>39,170</td>\n",
-       "      <td>$24,649,428.00</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>81.87784</td>\n",
-       "      <td>74.980853</td>\n",
-       "      <td>85.805463</td>\n",
-       "      <td>65.172326</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
-       "0             15         39,170  $24,649,428.00           78.985371   \n",
-       "\n",
-       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-       "0               81.87784       74.980853          85.805463          65.172326  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "#read the file for schools\n",
+    "schools_df = pd.read.csv(schools_file)\n",
+    "\n",
+    "\n",
+    "#read the file for students\n",
+    "students_df = pd.read.csv(students_file)\n",
+    "\n",
+    "#create the array for school names\n",
+    "school_names = schools_df['school'].unique()\n",
+    "\n",
+    "#merge\n",
+    "schools_df.rename(columns = {'name': 'school'}, inplace = True)\n",
+    "merged_df = students_df.merge(schools_df, how = 'left' on = 'school')\n",
+    "\n",
+    "\n",
+    "#count how many schools with length\n",
+    "school_count = len(school_names)\n",
+    "\n",
+    "#student count by district\n",
+    "student_count = schools_df['size'].sum()\n",
+    "\n",
+    "#student count from student file\n",
+    "total_student_rec = students_df['name'].count()\n",
+    "\n",
+    "#total budget\n",
+    "total_budget = schools_df['budget'].sum()\n",
+    "\n",
+    "#calc for number and % passing reading\n",
+    "num_passing_reading = students_df.loc[students_df['reading_score'] >= 70]['reading_score'].count()\n",
+    "percent_passing_reading = num_passing_reading/total_student_rec\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -758,9 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Math Scores by Grade"
    ]
@@ -1487,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1512,5 +1483,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
